<?xml version="1.0"?>
<package format="3">
  <name>blurr</name>
  <version>0.0.1</version>
  <description>Hardware communication with the BlueROV2 @ Centrale Nantes</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>mavros_msgs</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
